change background color and minor refactor

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(90deg, #1dfd6b 0%, #833ab4 100%);
+  background: linear-gradient(89deg, #04C8DE 0%, #d139b3 100%);;
 }
 
 code {
